# mocap-server

./: .gitignore  README.md
Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
Unix/easywsclient/: Makefile  cmake_install.cmake
Unix/flatbuf/: Makefile
Unix/mocap-test/: Makefile  cmake_install.cmake
Unix/protobuf/: Makefile  cmake_install.cmake
Unix/smallUDPClient/: Makefile
lib/: Vicon
lib/Vicon_DataStream_SDK_1.3.0.57137h_MAC/: ViconDataStreamSDK_CPPTest
lib/holojam_csharp_and_cpp_headers_and_interfaces/: holojam.fbs  holojam_generated.h  holojam_generated.js
src/: CMakeLists.txt  mocap-server.cpp
src/HoloMQTT/: CMakeLists.txt  HoloMQTT.cpp  HoloMQTT.h
src/Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
src/cmake/: FindMosquitto.cmake
src/easywsclient/: easywsclient.cpp
src/flatbuf/: CMakeLists.txt  holojam_generated.h
src/mocap-test/: CMakeLists.txt  mocap-test.cpp
src/protobuf/: CMakeLists.txt  VRCom.pb.cc  VRCom.pb.h
src/smallUDPClient/: CMakeLists.txt  smallUDPClient.cpp  smallUDPClient.hpp
